--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "watch": "webpack --watch"
+  },
   "dependencies": {
     "firebase": "^10.7.1"
   },
@@ -6,4 +9,5 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
+  
 }
