--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@splinetool/runtime": "^1.0.18",
     "firebase": "^10.7.1"
   },
   "devDependencies": {
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
-  
 }
