--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "@splinetool/runtime": "^1.0.18",
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "webpack": "^5.89.0",
