--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.0.1",
     "@splinetool/runtime": "^1.0.18",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0"
